refactor openapi generation to extension yaml definitions
